; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_url.c_up_free.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_url.c_up_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, %struct.urlpieces }
%struct.urlpieces = type { i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Curl_easy*)* @up_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @up_free(%struct.Curl_easy* %0) #0 {
  %2 = alloca %struct.Curl_easy*, align 8
  %3 = alloca %struct.urlpieces*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %2, align 8
  %4 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %5 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 1
  store %struct.urlpieces* %6, %struct.urlpieces** %3, align 8
  %7 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %8 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %7, i32 0, i32 7
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @Curl_safefree(i32 %9)
  %11 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %12 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %11, i32 0, i32 6
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @Curl_safefree(i32 %13)
  %15 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %16 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %15, i32 0, i32 5
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @Curl_safefree(i32 %17)
  %19 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %20 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %19, i32 0, i32 4
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @Curl_safefree(i32 %21)
  %23 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %24 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @Curl_safefree(i32 %25)
  %27 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %28 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @Curl_safefree(i32 %29)
  %31 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %32 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @Curl_safefree(i32 %33)
  %35 = load %struct.urlpieces*, %struct.urlpieces** %3, align 8
  %36 = getelementptr inbounds %struct.urlpieces, %struct.urlpieces* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @Curl_safefree(i32 %37)
  %39 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %40 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32*, i32** %41, align 8
  %43 = call i32 @curl_url_cleanup(i32* %42)
  %44 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %45 = getelementptr inbounds %struct.Curl_easy, %struct.Curl_easy* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 0
  store i32* null, i32** %46, align 8
  ret void
}

declare dso_local i32 @Curl_safefree(i32) #1

declare dso_local i32 @curl_url_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
